Contact box Created

--- a/ContactManager/index.html
+++ b/ContactManager/index.html
@@ -5,8 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Contact Manager</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="contactBox">
+        <div class="contactHeading">Contact</div>     
+        <div class="key">Name : </div>
+        <div class="value">Dante</div>  
+        <br>       
+        <div class="key">Address : </div>
+        <div class="value">Nero</div>
+        <br>
+        <div class="key">Number : </div>
+        <div class="value">Vergil</div>
+        <br>
+        <button id="removeButton">Remove</button>
+        <span class="contactImage"><img src="Images/Benny Potter.png"></span> 
+
+
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
