Basic Layout Done

--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -12,8 +12,55 @@
     
 
     <div class="calculator">
-        <div class="button" class="function">x<sup>2</sup></div>
-        <div class="button" class="function">x<sup>2</sup></div>
+        <div class="button function">x<sup>2</sup></div>
+        <div class="button function">x<sup>y</sup></div>
+        <div class="button function">sin</div>
+        <div class="button function">cos</div>
+        <div class="button function">tan</div>
+        <div class="button function">CE</div>
+        <div class="button function">C</div>
+        <div class="button function">&lt;&hyphen;</div>
+        <div class="button function">&#247;</div>
+        <br>
+        <div class="button function">x<sup>3</sup></div>
+        <div class="button function"><sup>y</sup>&#8730;x</div>
+        <div class="button function">sin<sup>-1</sup></div>
+        <div class="button function">cos<sup>-1</sup></div>
+        <div class="button function">tan<sup>-1</sup></div>
+        <div class="button digit">7</div>
+        <div class="button digit">8</div>
+        <div class="button digit">9</div>
+        <div class="button function">&#215;</div>
+        <br>
+        <div class="button function">&#8730;</div>
+        <div class="button function">10<sup>x</sup></div>
+        <div class="button function">log</div>
+        <div class="button function">Exp</div>
+        <div class="button function">Mod</div>
+        <div class="button digit">4</div>
+        <div class="button digit">5</div>
+        <div class="button digit">6</div>
+        <div class="button function">&hyphen;</div>
+        <br>
+        <div class="button function"><sup>1</sup>&#47<sub>x</sub></div>
+        <div class="button function">e<sup>x</sup></div>
+        <div class="button function">ln</div>
+        <div class="button function">dms</div>
+        <div class="button function">deg</div>
+        <div class="button digit">1</div>
+        <div class="button digit">2</div>
+        <div class="button digit">3</div>
+        <div class="button function">+</div>
+        <br>
+        <div class="button function">&#8593;</div>
+        <div class="button function">&pi;</div>
+        <div class="button function">n!</div>
+        <div class="button function">(</div>
+        <div class="button function">)</div>
+        <div class="button function">&#177;</div>
+        <div class="button digit">0</div>
+        <div class="button function">.</div>
+        <div class="button function">=</div>   
     </div>
 
     <script src="script.js"></script>
