--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -8,59 +8,62 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="outputBox">asd</div>
+    <div id="outputBox">
+        <div id="expression">as</div>
+        <div id="output">asd</div>
+    </div>
     
 
     <div class="calculator">
-        <div class="button function">x<sup>2</sup></div>
-        <div class="button function">x<sup>y</sup></div>
-        <div class="button function">sin</div>
-        <div class="button function">cos</div>
-        <div class="button function">tan</div>
-        <div class="button function">CE</div>
-        <div class="button function">C</div>
-        <div class="button function">&lt;&hyphen;</div>
-        <div class="button function">&#247;</div>
+        <div class="button function" id="square">x<sup>2</sup></div>
+        <div class="button function" id="power">x<sup>y</sup></div>
+        <div class="button function" id="sin">sin</div>
+        <div class="button function" id="cos">cos</div>
+        <div class="button function" id="tan">tan</div>
+        <div class="button function" id="clearOutput">CE</div>
+        <div class="button function" id="clearAll">C</div>
+        <div class="button function" if="backSpace">&#8592;</div>
+        <div class="button function" id="divide">&#247;</div>
         <br>
-        <div class="button function">x<sup>3</sup></div>
-        <div class="button function"><sup>y</sup>&#8730;x</div>
-        <div class="button function">sin<sup>-1</sup></div>
-        <div class="button function">cos<sup>-1</sup></div>
-        <div class="button function">tan<sup>-1</sup></div>
-        <div class="button digit">7</div>
-        <div class="button digit">8</div>
-        <div class="button digit">9</div>
-        <div class="button function">&#215;</div>
+        <div class="button function" id="cube">x<sup>3</sup></div>
+        <div class="button function" id="fractionalPower"><sup>y</sup>&#8730;x</div>
+        <div class="button function" id="sineInvers">sin<sup>-1</sup></div>
+        <div class="button function" id="cosineInverse">cos<sup>-1</sup></div>
+        <div class="button function" id="tanInverse">tan<sup>-1</sup></div>
+        <div class="button digit" id="digit7">7</div>
+        <div class="button digit" id="digit8">8</div>
+        <div class="button digit" id="digit9">9</div>
+        <div class="button function" id="multiply">&#215;</div>
         <br>
-        <div class="button function">&#8730;</div>
-        <div class="button function">10<sup>x</sup></div>
-        <div class="button function">log</div>
-        <div class="button function">Exp</div>
-        <div class="button function">Mod</div>
-        <div class="button digit">4</div>
-        <div class="button digit">5</div>
-        <div class="button digit">6</div>
-        <div class="button function">&hyphen;</div>
+        <div class="button function" id="root">&#8730;</div>
+        <div class="button function" id="antilogBase10">10<sup>x</sup></div>
+        <div class="button function" id="logBase10">log</div>
+        <div class="button function" id="power10">Exp</div>
+        <div class="button function" id="remainder">Mod</div>
+        <div class="button digit" id="digit4">4</div>
+        <div class="button digit" id="digit5">5</div>
+        <div class="button digit" id="digit6">6</div>
+        <div class="button function" id="subtract">&hyphen;</div>
         <br>
-        <div class="button function"><sup>1</sup>&#47<sub>x</sub></div>
-        <div class="button function">e<sup>x</sup></div>
-        <div class="button function">ln</div>
+        <div class="button function" id="reciprocal"><sup>1</sup>&#47<sub>x</sub></div>
+        <div class="button function" id="antilogBaseE">e<sup>x</sup></div>
+        <div class="button function" id="logBaseE">ln</div>
         <div class="button function">dms</div>
         <div class="button function">deg</div>
-        <div class="button digit">1</div>
-        <div class="button digit">2</div>
-        <div class="button digit">3</div>
-        <div class="button function">+</div>
+        <div class="button digit" id="digit1">1</div>
+        <div class="button digit" id="digit2">2</div>
+        <div class="button digit" id="digit3">3</div>
+        <div class="button function" id="add">+</div>
         <br>
         <div class="button function">&#8593;</div>
-        <div class="button function">&pi;</div>
-        <div class="button function">n!</div>
-        <div class="button function">(</div>
-        <div class="button function">)</div>
-        <div class="button function">&#177;</div>
-        <div class="button digit">0</div>
-        <div class="button function">.</div>
-        <div class="button function">=</div>   
+        <div class="button function" id="pi">&pi;</div>
+        <div class="button function" id="factorial">n!</div>
+        <div class="button function" id="leftBracket">(</div>
+        <div class="button function" id="rightBracket">)</div>
+        <div class="button function" id="changeSign">&#177;</div>
+        <div class="button digit" id="digit0">0</div>
+        <div class="button function" id="decimal">.</div>
+        <div class="button function" id="equal">=</div>   
     </div>
 
     <script src="script.js"></script>
